--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -3,6 +3,8 @@ footer{
     color: #fff;
     padding: 60px 0 30px;
     margin-top: 100px;
+    position: relative;
+    bottom: 0;
     .wrapper{
         display: flex;
         justify-content: center;
