--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,6 +7,8 @@
 @import './footer.scss';
 @import './home.scss';
 @import './404.scss';
+@import './_main.scss';
+@import './card.scss';
 
 // Style général
 body, *{
@@ -17,6 +19,8 @@ body, *{
 }
 
 #root{
+    display: flex;
+    justify-content: space-between;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
