✨ Ajout des collapses de la page Apropos

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,6 +6,7 @@
 @import './_header.scss';
 @import './footer.scss';
 @import './home.scss';
+@import './_collapse.scss';
 @import './404.scss';
 @import './_main.scss';
 @import './card.scss';
