--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -1,5 +1,7 @@
 .card {
   display: flex;
+  color: $gris;
+  align-items:end;
   width: 300px;
   height: 300px;
   background-color: $primary-color;
