--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,10 +1,14 @@
 .main {
   display: flex;
-  flex-wrap: wrap;
-  height: 100%;
-  display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
-  margin: 20px;
+  flex-wrap: wrap;
+  display: flex;
+  background-color: #841a1a;
+  border-radius: $container-radius;
+  margin: 50px;
+  @media screen and (max-width: 768px){
+    margin: 0;
+    width: 80%;
+  }
 }
