💄 ✨ Ajout du contenu cards et optimisation du style + prettier

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 // couleurs
-$primary-color: #FF6060;
-$gris: #F7F7F7;
+$primary-color: #ff6060;
+$gris: #f7f7f7;
 
 // breakpoints
 $tablette: 880px;
