--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,23 +1,24 @@
-footer{
-    background: #000;
-    color: #fff;
-    padding: 60px 0 30px;
-    margin-top: 100px;
-    position: relative;
-    bottom: 0;
-    .wrapper{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        gap: 30px;
-        p{
-            font-size: 24px;
-            font-weight: 500;
+footer {
+	background: #000;
+	color: #fff;
+	padding: 60px 0 30px;
+	margin-top: 50px;
+	position: relative;
+	bottom: 0;
+	.wrapper {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		gap: 30px;
+		p {
+			font-size: 24px;
+			font-weight: 500;
 
-            @media screen and (max-width: $phone) {
-                font-size: 12px; 
-            }
-        }
-    }
+			@media screen and (max-width: $phone) {
+				font-size: 12px;
+				text-align: center;
+			}
+		}
+	}
 }
