--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,97 +1,97 @@
-.banner{
-    margin: 20px auto;
-    width: 100%;
-    @media screen and (min-width: $tablette) {
-        margin: 63px auto 43px;
-    }
-    .wrapper{
-        height: 223px;
-        &::before{
-            content: '';
-            display: block;
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            background: rgba(0,0,0,0.3);
-            border-radius: $container-radius;
-        }
-        img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            border-radius: $container-radius;
-        }
-        h1{
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            z-index: 2;
-            transform: translate(-80%, -50%);
-            color: white;
-            font-size: 24px;
-            font-weight: 500;
+.banner {
+	margin: 20px auto;
+	width: 100%;
+	@media screen and (min-width: $tablette) {
+		margin: 63px auto 43px;
+	}
+	.wrapper {
+		height: 223px;
+		&::before {
+			content: '';
+			display: block;
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			top: 0;
+			left: 0;
+			background: rgba(0, 0, 0, 0.5);
+			border-radius: $container-radius;
+		}
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			border-radius: $container-radius;
+		}
+		h1 {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			z-index: 2;
+			transform: translate(-80%, -50%);
+			color: white;
+			font-size: 24px;
+			font-weight: 500;
 
-            @media screen and (min-width: $tablette) {
-                font-size: 48px;
-                width: max-content;
-                transform: translate(-50%, -50%);
-            }
-        }
-    }
+			@media screen and (min-width: $tablette) {
+				font-size: 48px;
+				width: max-content;
+				transform: translate(-50%, -50%);
+			}
+		}
+	}
 }
 
-.housings_list{
-    list-style: none;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: 340px;
-    place-items: center;
-    gap: 20px;
-    width: 100%;
-    border-radius: $container-radius;
-    .housing{
-        position: relative;
-        width: 100%;
-        height: 340px;
-        &::before{
-            content: '';
-            display: block;
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 1;
-            background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
-            border-radius: $item-radius;
-        }
-        img{
-            border-radius: $item-radius;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-        .housing_title{
-            position: absolute;
-            z-index: 2;
-            bottom: 20px;
-            left: 20px;
-            color: white;
-            max-width: 70%;
-            font-size: 18px;
-            font-weight: 500;
-        }
-    }
+.housings_list {
+	list-style: none;
+	display: grid;
+	grid-template-columns: repeat(1, 1fr);
+	grid-template-rows: 340px;
+	place-items: center;
+	gap: 20px;
+	width: 100%;
+	border-radius: $container-radius;
+	.housing {
+		position: relative;
+		width: 100%;
+		height: 340px;
+		&::before {
+			content: '';
+			display: block;
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			top: 0;
+			left: 0;
+			z-index: 1;
+			background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+			border-radius: $item-radius;
+		}
+		img {
+			border-radius: $item-radius;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+		.housing_title {
+			position: absolute;
+			z-index: 2;
+			bottom: 20px;
+			left: 20px;
+			color: white;
+			max-width: 70%;
+			font-size: 18px;
+			font-weight: 500;
+		}
+	}
 
-    @media screen and (min-width: $phone) {
-        grid-template-columns: repeat(2, 1fr);
-    }
-    @media screen and (min-width: $tablette) {
-        grid-template-columns: repeat(3, 1fr);
-        background: $gris;
-        padding: 56px 50px;
-        gap: 60px;
-    }
+	@media screen and (min-width: $phone) {
+		grid-template-columns: repeat(2, 1fr);
+	}
+	@media screen and (min-width: $tablette) {
+		grid-template-columns: repeat(3, 1fr);
+		background: $gris;
+		padding: 56px 50px;
+		gap: 60px;
+	}
 }
