--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,11 +4,12 @@
 // Fichiers
 @import './_variables.scss';
 @import './_header.scss';
-@import './footer.scss';
-@import './home.scss';
+@import './_footer.scss';
+@import './_home.scss';
 @import './_collapse.scss';
-@import './404.scss';
-@import './card.scss';
+@import './_404.scss';
+@import './_card.scss';
+@import './_housingPage.scss';
 
 // Style général
 body,
