--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,6 +10,7 @@
 @import './_404.scss';
 @import './_card.scss';
 @import './_housingPage.scss';
+@import './ImageCarousel.scss';
 
 // Style général
 body,
