--- a/src/styles/_housingPage.scss
+++ b/src/styles/_housingPage.scss
@@ -8,9 +8,17 @@
 		object-fit: cover;
 	}
 	.general {
+		padding-top: 30px;
+		gap: 20%;
+		display: flex;
+		justify-content: space-between;
+		@media screen and (max-width: $tablette) {
+			padding-top: 10px;
+			flex-direction: column;
+			gap: 20px;
+		}
 		.housingInfos {
 			h1 {
-				font-size: clamp(1.5rem, -1.3rem + 8vw, 3rem);
 				font-weight: 500;
 				& + p {
 					font-size: clamp(1rem, -0.875rem + 8vw, 1.5rem);
@@ -27,20 +35,27 @@
 					color: white;
 					font-size: 14px;
 					background: $primary-color;
-					padding: 3px 40px;
+					padding: 1% 4%;
 					border-radius: $item-radius;
 				}
 			}
 		}
 		.otherInfos {
 			display: flex;
+			flex-direction: column-reverse;
 			justify-content: space-between;
+			@media screen and (max-width: $tablette) {
+				flex-direction: row;
+				gap: 20px;
+				flex-wrap: wrap;
+			}
 			.host {
 				display: flex;
 				align-items: center;
 				gap: 10px;
 				margin-bottom: 24px;
 				order: 2;
+				flex-direction: row-reverse;
 				p {
 					font-size: 18px;
 					font-weight: 500;
@@ -56,6 +71,23 @@
 				display: flex;
 				justify-content: space-between;
 				align-items: center;
+				@media screen and (max-width: $tablette) {
+					flex-wrap: wrap;
+				}
+				.star {
+					display: inline-block;
+					margin: 0 2px;
+					font-size: 24px;
+					border-radius: 20px;
+
+					&.red {
+						color: $primary-color;
+					}
+
+					&.grey {
+						color: #dbdbdb;
+					}
+				}
 			}
 		}
 	}
