--- a/src/styles/_housingPage.scss
+++ b/src/styles/_housingPage.scss
@@ -37,6 +37,7 @@
 					background: $primary-color;
 					padding: 1% 4%;
 					border-radius: $item-radius;
+					font-weight: 500;
 				}
 			}
 		}
