--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -29,10 +29,11 @@
 			left: 50%;
 			z-index: 2;
 			transform: translate(-80%, -50%);
+			stroke: black;
 			color: white;
 			font-size: 24px;
 			font-weight: 500;
-
+			text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 			@media screen and (min-width: $tablette) {
 				font-size: 48px;
 				width: max-content;
