--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -29,7 +29,6 @@
 			left: 50%;
 			z-index: 2;
 			transform: translate(-80%, -50%);
-			stroke: black;
 			color: white;
 			font-size: 24px;
 			font-weight: 500;
@@ -56,6 +55,7 @@
 		position: relative;
 		width: 100%;
 		height: 340px;
+
 		&::before {
 			content: '';
 			display: block;
@@ -67,13 +67,16 @@
 			z-index: 1;
 			background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
 			border-radius: $item-radius;
+			pointer-events: none;
 		}
+
 		img {
 			border-radius: $item-radius;
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
 		}
+
 		.housing_title {
 			position: absolute;
 			z-index: 2;
