--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,5 +1,7 @@
 header {
-	padding-top: 30px;
+	display: flex;
+	padding: 30px;
+	padding-bottom: 0px;
 
 	.wrapper {
 		display: flex;
@@ -11,10 +13,10 @@ header {
 				display: flex;
 				gap: 30px;
 				list-style: none;
+				flex-wrap: wrap;
 
 				li {
-					font-size: 24px;
-					line-height: 34px;
+					font-size: clamp(19px, 2vw, 24px);
 					font-weight: 500;
 					color: black;
 
@@ -29,12 +31,24 @@ header {
 			.logo {
 				max-width: 140px;
 			}
+			nav ul {
+				gap: 10px;
+				justify-content: center;
+			}
 
 			nav ul li {
-				font-size: 12px;
-				line-height: 24px;
 				text-transform: uppercase;
+				font-size: 1.5rem;
 			}
+		}
+	}
+	.nav-link-hitbox {
+		display: inline-block;
+		padding: 5px;
+	}
+	@media screen and (max-width: $phone) {
+		.nav-link-hitbox {
+			padding: 15px;
 		}
 	}
 }
