--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,6 +1,6 @@
 header {
 	display: flex;
-	padding: 30px;
+	padding: 20px;
 	padding-bottom: 0px;
 
 	.wrapper {
@@ -16,12 +16,14 @@ header {
 				flex-wrap: wrap;
 
 				li {
-					font-size: clamp(19px, 2vw, 24px);
+					font-size: clamp(14px, 2vw, 24px);
 					font-weight: 500;
 					color: black;
 
 					&.active a {
-						text-decoration: underline;
+						.nav-link-hitbox {
+							text-decoration: underline;
+						}
 					}
 				}
 			}
@@ -38,17 +40,11 @@ header {
 
 			nav ul li {
 				text-transform: uppercase;
-				font-size: 1.5rem;
 			}
 		}
 	}
 	.nav-link-hitbox {
 		display: inline-block;
-		padding: 5px;
-	}
-	@media screen and (max-width: $phone) {
-		.nav-link-hitbox {
-			padding: 15px;
-		}
+		padding: 15px 5px;
 	}
 }
