--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -5,7 +5,10 @@
 		margin: 63px auto 43px;
 	}
 	.wrapper {
-		height: 223px;
+		height: 111px;
+		@media screen and (min-width: $phone) {
+			height: 223px;
+		}
 		&::before {
 			content: '';
 			display: block;
@@ -14,7 +17,7 @@
 			position: absolute;
 			top: 0;
 			left: 0;
-			background: rgba(0, 0, 0, 0.5);
+			background: rgba(0, 0, 0, 0.7);
 			border-radius: $container-radius;
 		}
 		img {
@@ -46,15 +49,16 @@
 	list-style: none;
 	display: grid;
 	grid-template-columns: repeat(1, 1fr);
-	grid-template-rows: 340px;
-	place-items: center;
 	gap: 20px;
 	width: 100%;
 	border-radius: $container-radius;
 	.housing {
 		position: relative;
 		width: 100%;
-		height: 340px;
+		height: 240px;
+		@media screen and (min-width: $phone) {
+			height: 340px;
+		}
 
 		&::before {
 			content: '';
