--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,8 +1,8 @@
 .banner {
-	margin: 0 auto;
+	margin: 30px auto;
 	width: 100%;
 	@media screen and (min-width: $tablette) {
-		margin: 63px auto 0;
+		margin: 50px auto 0;
 	}
 	.wrapper {
 		height: 111px;
